<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textview_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aaron_pedwell"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pedaar_aol_com"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorAccent" />


            <TextView
                android:id="@+id/textview_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Phone_Number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorAccent"
                tools:text="01227123456" />


            <TextView
                android:id="@+id/textview_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7_swanfield_road"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:id="@+id/textview_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whitstable"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:id="@+id/textview_postcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ct5_4hl"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorAccent" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>