<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@color/material_blue_600">

    <android.support.constraint.ConstraintLayout
        android:name=".ui.myactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:label="@string/home"
        tools:context=".HomeActivity">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="260dp"
            android:layout_height="174dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/lister_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/property_manager" />


        <Button
            android:id="@+id/ex_cust"
            android:layout_width="110dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="sans-serif-medium"
            android:text="@string/customers"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/prop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/prop"
            android:layout_width="110dp"
            android:layout_height="37dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="sans-serif-medium"
            android:text="@string/properties"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/signOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ex_cust" />

        <Button
            android:id="@+id/signOut"
            android:layout_width="110dp"
            android:layout_height="37dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prop" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>